--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
-  }
+    "eslint-plugin-vue": "^8.0.3",
+    "express": "^4.17.3",
+    "serve-static": "^1.15.0"
+  },
+  "postinstall": "npm run build",
+  "start": "node server.js"
 }
