Modify again Package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "npm run build",
+    "start": "node server.js"
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
@@ -25,7 +27,5 @@
     "eslint-plugin-vue": "^8.0.3",
     "express": "^4.17.3",
     "serve-static": "^1.15.0"
-  },
-  "postinstall": "npm run build",
-  "start": "node server.js"
+  }
 }
