--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
-    "express":"*",
-    "body-parser":"*"
+    "express":"4.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
